# pathtracer

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  build.ninja.template  ci.sh  configure  continuous-build.sh  lint.sh  meson.build  readme.md  recreate-venv.sh  requirements.txt  todo.md  visualize-kdbuild.py  visualize-kdtree.py  visualize-rays.py  visualize.py  watch.sh
kdtree-cli/: Cargo.toml
kdtree-cli/src/: main.rs
kdtree-print/: Cargo.toml
kdtree-print/src/: main.rs
kdtree-reducer-cli/: Cargo.toml
kdtree-reducer-cli/src/: main.rs
kdtree-tester/: Cargo.toml
kdtree-tester-cli/: Cargo.toml
kdtree-tester-cli/src/: checked_intersection.rs  lib.rs  main.rs  ray_bouncer.rs  ray_tester.rs  reducer.rs  size.rs
kdtree-tester/src/: checked_intersection.rs  lib.rs  ray_bouncer.rs
material-tester-cli/: Cargo.toml
material-tester-cli/src/: main.rs
pathtracer-cli/: Cargo.toml
pathtracer-cli/src/: main.rs
pathtracer-gui/: Cargo.toml
pathtracer-gui/src/: gui.rs  main.rs  stage.rs  worker.rs  workers.rs
raytracer-cli/: Cargo.toml
raytracer-cli/src/: main.rs
scene/: Cargo.toml
scene/src/: camera.rs  lib.rs  light.rs  material.rs
src/: CMakeLists.txt  camera.rs  cmdline.cpp  geometry.rs  glut.cpp  image_buffer.rs  kdtree.rs  lib.rs  light.rs  main.cpp  main.rs  material.rs  pathtracer.rs  raylogger.rs  raytracer.rs  sampling.rs  scene.rs
src/cmdline/: CMakeLists.txt  main.cpp
src/frontends/: CMakeLists.txt
src/frontends/cmd/: CMakeLists.txt  main.cpp  thread.cpp  thread.hpp
src/frontends/cmdline/: CMakeLists.txt
src/frontends/gui/: CMakeLists.txt  gl.cpp  gl.hpp  gui.cpp  gui.hpp  main.cpp  shaders.cpp
src/frontends/mpi/: CMakeLists.txt  main.cpp
src/geometry/: aabb.h  aabb.hpp  aabb.rs  aap.h  aap.rs  algorithms.rs  bounding.cc  bounding.cpp  bounding.h  bounding.hpp  bounding.rs  intersect.rs  ray.h  ray.hpp  ray.rs  triangle.h  triangle.hpp  triangle.rs  tribox.cc  tribox.h  tribox.hpp  triray.cc  triray.h  triray.hpp
src/gui/: CMakeLists.txt  gl.cpp  gl.hpp  gui.cpp  gui.hpp  main.cpp  shaders.hpp
src/gui/data/: simple.frag  simple.vert
src/kdtree/: array.cc  array.h  array.hpp  build.cpp  build.hpp  build.rs  build_median.rs  build_naive.rs  build_sah.rs  intersection.h  intersection.hpp  kdtree.cpp  kdtree.hpp  linked.cc  linked.h  linked.hpp  naive.cc  naive.cpp  naive.h  naive.hpp  optimize.cc  optimize.cpp  optimize.h  optimize.hpp  split.rs  surface_area_heuristic.cc  surface_area_heuristic.cpp  surface_area_heuristic.h  surface_area_heuristic.hpp  traverse.cc  traverse.cpp  traverse.h  traverse.hpp  util.cc  util.h  util.hpp
src/lib/: CMakeLists.txt
src/lib/kdtree/: kdtree.cpp  kdtree.hpp  linked.cpp  linked.hpp  util.hpp
src/lib/tracer/: camera.hpp  intersection.hpp  light.hpp  material.hpp  pathtracer.cpp  scene.cpp  scene.hpp  triangle.hpp
src/lib/util/: objmodel.cpp  objmodel.hpp
src/math/: CMakeLists.txt  aabb.hpp  collisions.hpp  helpers.hpp  ray.hpp  tribox.hpp
src/mpi/: CMakeLists.txt  main.cpp
src/pathtracer/: CMakeLists.txt  camera.hpp  fastrand.hpp  intersection.hpp  light.hpp  main.cc  main.cpp  material.cpp  material.hpp  mcsampling.hpp  objloader.cpp  objloader.hpp  objmodel.cpp  objmodel.hpp  pathtracer.cpp  pathtracer.hpp  samplebuffer.cpp  samplebuffer.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp  thread.cc  thread.cpp  thread.h  triangle.hpp
src/pathtracer-gl/: gl.cc  gl.cpp  gl.h  gui.cpp  gui.hpp  main.cc  main.cpp  shaders.cc  shaders.cpp  shaders.h
src/pathtracer/kdtree/: array.hpp  build.cpp  build.hpp  compact.hpp  intersections.cpp  intersections.hpp  linked.cpp  linked.hpp  node.hpp  optimize.cpp  optimize.hpp  print.cpp  print.hpp  sah.hpp  stacktraverser.cpp  stacktraverser.hpp  traverse.cpp  traverse.hpp  tree.cpp  tree.hpp  util.hpp
src/pathtracer/math/: aabb.cpp  aabb.hpp  collisions.hpp  helpers.hpp  ray.hpp  tribox.hpp
src/pathtracer/objloader/: Obj.cpp  Obj.hpp  ObjLexer.l  ObjParser.y  Word.hpp
src/progs/: CMakeLists.txt  camera-tester.cpp  print-obj.cpp  print-tree.cpp  sizes.cpp
src/progs/cmd/: CMakeLists.txt  main.cpp  thread.cpp  thread.hpp
src/progs/gui/: CMakeLists.txt  gl.cpp  gl.hpp  gui.cpp  gui.hpp  main.cpp  shaders.cpp
src/tests/: camera-tester.cc  camera-tester.cpp  print-obj.cpp  print-tree.cc  print-tree.cpp  print-wavefront.cc  print-wavefront.cpp  sizes.cc  sizes.cpp  unit-tests.cc
src/trace/: CMakeLists.txt  camera.cpp  camera.h  camera.hpp  concurrentqueue.hpp  fastrand.h  fastrand.hpp  intersection.hpp  light.cc  light.cpp  light.h  light.hpp  material.cc  material.cpp  material.h  material.hpp  mcsampling.h  mcsampling.hpp  nicetime.hpp  path.cpp  path.hpp  pathtracer.cc  pathtracer.cpp  pathtracer.h  pathtracer.hpp  samplebuffer.cc  samplebuffer.cpp  samplebuffer.h  samplebuffer.hpp  scene.cc  scene.cpp  scene.h  scene.hpp  texture.cc  texture.cpp  texture.h  texture.hpp  triangle.hpp  tribox.hpp
src/trace/geometry/: aabb.cpp  aabb.hpp  bounding.cpp  bounding.hpp  triangle.hpp  tribox.hpp  triray.hpp
src/trace/kdtree/: array.hpp  build.cpp  (+11 more)
src/tracer/: intersection.hpp  kdtree.cpp  kdtree.hpp  material.cpp  mcsampling.hpp  pathtracer.cpp  pathtracer.hpp  scene.cpp  scene.hpp  texture.cpp
src/util/: CMakeLists.txt  clock.h  clock.hpp  concurrentqueue.h  concurrentqueue.hpp  fastrand.hpp  gl.cpp  image.cpp  image.hpp  nicetime.cc  nicetime.cpp  nicetime.h  nicetime.hpp  objmodel.cpp  path.cc  path.cpp  path.h  path.hpp  samplebuffer.cpp  samplebuffer.hpp  strings.h  strings.hpp
src/wavefront/: mtl.cc  mtl.cpp  mtl.h  mtl.hpp  mtl.rs  obj.cc  obj.cpp  obj.hpp  obj.rs  parse.h  parse.hpp
tests/: CMakeLists.txt  camera-tester.cc  print-obj.cpp  print-tree-svg.cc  print-tree.cc  print-tree.cpp  print-wavefront.cc  printtree.cpp  sizes.cpp  triangle-kdtree-tester.cc  unit-tests.cc
tracing/: Cargo.toml
tracing/src/: camera.rs  collections.rs  image_buffer.rs  lib.rs  light.rs  material.rs  measure.rs  pathtracer.rs  properties.rs  raylogger.rs  raytracer.rs  sampling.rs  worker.rs
(+174 files in other folders)
