workspace = { members = [ "geometry", "kdtree", "kdtree-print","wavefront"] }

[package]
name = "pathtracer"
version = "1.0.0"
edition = "2021"

[dependencies]
assert_approx_eq = "1.1.0"
clap = { version = "4.5.1", default-features = false, features = ["std", "derive"] }
geometry = { version = "1.0.0", path = "geometry" }
image = { version = "0.24.9", default-features = false, features = ["png"] }
kdtree = { version = "0.1.0", path = "kdtree" }
nalgebra = { version = "0.32.4", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "std"] }
rayon = "1.9.0"
simba = { version = "0.8.1", default-features = false, features = ["std"] }
smallvec = "1.13.1"
termion = "3.0.0"
time = { version = "0.3.34", features = ["formatting"] }
wavefront = { version = "1.0.0", path = "wavefront" }

[profile.release]
codegen-units = 1
