workspace = { members = [ "geometry", "kdtree", "kdtree-print", "pathtracer-cli", "raytracer-cli","wavefront"] }

[package]
name = "pathtracer"
version = "1.0.0"
edition = "2021"

[features]
ray_logging = []

[dependencies]
assert_approx_eq = "1.1.0"
geometry = { version = "1.0.0", path = "geometry" }
image = { version = "0.24.9", default-features = false, features = ["png"] }
kdtree = { version = "1.0.0", path = "kdtree" }
nalgebra = { version = "0.32.4", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "std"] }
rayon = "1.9.0"
simba = { version = "0.8.1", default-features = false, features = ["std"] }
wavefront = { version = "1.0.0", path = "wavefront" }

[profile.release]
codegen-units = 1
