workspace = { members = [ "geometry", "kdtree", "kdtree-cli", "kdtree-reducer-cli", "kdtree-tester-cli", "pathtracer-cli", "raytracer-cli", "scene","wavefront"] }

[package]
name = "pathtracer"
version = "1.0.0"
edition = "2021"

[features]
ray_logging = []

[dependencies]
assert_approx_eq = "1.1.0"
geometry = { version = "1.0.0", path = "geometry" }
image = { version = "0.24.9", default-features = false, features = ["png"] }
kdtree = { version = "1.0.0", path = "kdtree" }
nalgebra = { version = "0.32.5", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "std"] }
scene = { version = "1.0.0", path = "scene" }
simba = { version = "0.8.1", default-features = false, features = ["std"] }
wavefront = { version = "1.0.0", path = "wavefront" }

[profile.release]
codegen-units = 1

[profile.release-lto]
inherits = 'release'
lto = true
