[package]
name = "kdtree-cli"
description = "CLI for constructing kd-trees."
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
geometry = { version = "1.0.0", path = "../geometry" }
kdtree = { version = "1.0.0", path = "../kdtree" }
time = { version = "0.3.37", features = ["formatting"] }
wavefront = { version = "1.0.0", path = "../wavefront" }
