[package]
name = "kdtree-print"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", default-features = false, features = ["derive", "std"] }
geometry = { version = "1.0.0", path = "../geometry" }
kdtree = { version = "0.1.0", path = "../kdtree" }
time = { version = "0.3.34", features = ["formatting"] }
wavefront = { version = "1.0.0", path = "../wavefront" }
