[package]
name = "kdtree-tester-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
geometry = { version = "1.0.0", path = "../geometry" }
glam = "0.32.1"
kdtree = { version = "1.0.0", path = "../kdtree" }
rand = { version = "0.10.1", default-features = false }
rayon = { version = "1.12.0", default-features = false }
tracing = { version = "1.0.0", path = "../tracing" }
wavefront = { version = "1.0.0", path = "../wavefront" }
