[package]
name = "kdtree-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
geometry = { version = "1.0.0", path = "../geometry" }
glam = "0.28.0"
kdtree = { version = "1.0.0", path = "../kdtree" }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rayon = { version = "1.10.0", default-features = false }
scene = { version = "1.0.0", path = "../scene" }
tracing = { version = "1.0.0", path = "../tracing" }
wavefront = { version = "1.0.0", path = "../wavefront" }
