[package]
name = "material-tester-cli"
version = "0.1.0"
edition = "2024"

[features]
ray_logging = ["tracing/ray_logging"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
geometry = { version = "1.0.0", path = "../geometry" }
glam = "0.30.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
kdtree = { version = "1.0.0", path = "../kdtree" }
time = "0.3.37"
tracing = { version = "1.0.0", path = "../tracing" }
