[package]
name = "pathtracer-cli"
description = "Global illumination raytracing CLI."
version = "1.0.0"
edition = "2024"

[features]
ray_logging = ["tracing/ray_logging"]

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
geometry = { version = "1.0.0", path = "../geometry" }
glam = "0.31.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
kdtree = { version = "1.0.0", path = "../kdtree" }
time = { version = "0.3.47", features = ["formatting"] }
tracing = { version = "1.0.0", path = "../tracing" }
wavefront = { version = "1.0.0", path = "../wavefront" }
