[package]
name = "pathtracer-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
geometry = { version = "1.0.0", path = "../geometry" }
glam = "0.29.2"
kdtree = { version = "1.0.0", path = "../kdtree" }
miniquad = "0.4.7"
time = "0.3.37"
tracing = { version = "1.0.0", path = "../tracing" }
wavefront = { version = "1.0.0", path = "../wavefront" }
