[package]
name = "raytracer-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", default-features = false, features = ["derive", "std"] }
kdtree = { version = "1.0.0", path = "../kdtree" }
pathtracer = { version = "1.0.0", path = ".." }
wavefront = { version = "1.0.0", path = "../wavefront" }
