[package]
name = "raytracer-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
kdtree = { version = "1.0.0", path = "../kdtree" }
scene = { version = "1.0.0", path = "../scene" }
tracing = { version = "1.0.0", path = "../tracing" }
