[package]
name = "scene"
version = "1.0.0"
edition = "2021"

[dependencies]
geometry = { version = "1.0.0", path = "../geometry" }
image = { version = "0.25.1", default-features = false }
nalgebra = { version = "0.32.5", default-features = false }
simba = { version = "0.8.1", default-features = false, features = ["std"] }
wavefront = { version = "1.0.0", path = "../wavefront" }
