[package]
name = "tracing"
version = "1.0.0"
edition = "2024"

[features]
ray_logging = []

[dependencies]
approx = "0.5.1"
geometry = { version = "1.0.0", path = "../geometry" }
glam = { version = "0.32.1", features = ["approx"] }
image = { version = "0.25.10", default-features = false }
kdtree = { version = "1.0.0", path = "../kdtree" }
rand = { version = "0.10.1", default-features = false, features = ["sys_rng"] }
rayon = "1.12.0"
time = "0.3.47"
wavefront = { version = "1.0.0", path = "../wavefront" }
